# xuxiang-thinkflow

./: .env.example  .gitignore  .npmignore  CITATION.cff  DESIGN.md  LICENSE  OPEN_SOURCE_RELEASE.md  PROTOCOL.md  README.en.md  README.md  SECURITY.md  config.example.json  package.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
bench/agent_comparison_20260704/: README.md  analyze_runs.py  clean_prompts.py  run_benchmark.py  run_benchmark_normal.py
bench/agent_comparison_20260704/prompts/: novel_five_chapters.md  novel_outline.md
bench/agent_comparison_20260704/prompts_clean/: frontend_app.md  novel_five_chapters.md
bench/agent_comparison_20260704/reports_deepseek_v4_flash/: summary.md  technical_report.md
bench/controlled_same_prompt_v0.5/: README.md  analyze.py  manifest.json  run_record.example.json
bench/reproducible_agent_efficiency/: README.md  analyze.py  manifest.json  prompt.txt  usage_compare_report.latest.json  usage_compare_report.latest.md
docs/: command-execution-queue.md  demo-packaging-and-install.md  predictable-tool-calls.md  stable-v0.1-technical-report.md  xuxiang-streaming-agent.md
scripts/: npm-postinstall.js
src/: __init__.py  agent_loop.py  baseline_agent.py  cli.py  compaction.py  context.py  delivery.py  executor.py  interfaces.py  model_registry.py  parser.py  provider.py  renderer.py  runtime_context.py  security.py  session.py  skills.py  streaming.py  text_filter.py  tool_registry.py  tui.py  usage_tracker.py
tests/: run_all.py  smoke_api.py  test_core.py  test_parser.py
(+4 files in other folders)
